--- a/analysis_size.ipynb
+++ b/analysis_size.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,19 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_original = pd.read_csv(\"results/hochuli/count.csv\")\n",
-    "df_double = pd.read_csv(\"results/hochuli_double/count.csv\")\n",
-    "df_deep = pd.read_csv(\"results/hochuli_deep/count.csv\")\n",
+    "df_original = pd.read_csv(\"results/hochuli/new_count.csv\")\n",
+    "df_double = pd.read_csv(\"results/hochuli_double/new_count.csv\")\n",
+    "df_deep = pd.read_csv(\"results/hochuli_deep/new_count.csv\")\n",
     "df_mobilenet = pd.read_csv(\"results/mobilenet/count.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -88,50 +88,50 @@
        "      <th>-1</th>\n",
        "      <td>3.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.333169</td>\n",
-       "      <td>0.882420</td>\n",
-       "      <td>1.729141</td>\n",
+       "      <td>0.322473</td>\n",
+       "      <td>0.886260</td>\n",
+       "      <td>1.136197</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.000000e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>3.0</td>\n",
-       "      <td>2.303282</td>\n",
-       "      <td>2.302570</td>\n",
-       "      <td>0.098200</td>\n",
-       "      <td>19.601018</td>\n",
-       "      <td>285.0</td>\n",
+       "      <td>2.303302</td>\n",
+       "      <td>2.302398</td>\n",
+       "      <td>0.100000</td>\n",
+       "      <td>16.913589</td>\n",
+       "      <td>229.6</td>\n",
        "      <td>1.056384e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3.0</td>\n",
-       "      <td>2.302126</td>\n",
-       "      <td>2.301574</td>\n",
-       "      <td>0.111200</td>\n",
-       "      <td>19.168741</td>\n",
-       "      <td>309.8</td>\n",
+       "      <td>2.301682</td>\n",
+       "      <td>2.300086</td>\n",
+       "      <td>0.153278</td>\n",
+       "      <td>16.969304</td>\n",
+       "      <td>283.2</td>\n",
        "      <td>1.056384e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3.0</td>\n",
-       "      <td>2.217693</td>\n",
-       "      <td>1.982424</td>\n",
-       "      <td>0.228178</td>\n",
-       "      <td>19.218155</td>\n",
-       "      <td>308.8</td>\n",
+       "      <td>2.068055</td>\n",
+       "      <td>1.702323</td>\n",
+       "      <td>0.372189</td>\n",
+       "      <td>16.919213</td>\n",
+       "      <td>1994.0</td>\n",
        "      <td>1.056384e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>3.0</td>\n",
-       "      <td>1.717483</td>\n",
-       "      <td>1.644966</td>\n",
-       "      <td>0.359289</td>\n",
-       "      <td>19.185289</td>\n",
-       "      <td>372.8</td>\n",
+       "      <td>1.644859</td>\n",
+       "      <td>1.396304</td>\n",
+       "      <td>0.481533</td>\n",
+       "      <td>16.921069</td>\n",
+       "      <td>1804.8</td>\n",
        "      <td>1.056384e+09</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -141,11 +141,11 @@
       "text/plain": [
        "       execution  train_loss  val_loss   val_acc       time  zero_relu_call   \n",
        "epoch                                                                         \n",
-       "-1           3.0         NaN  0.333169  0.882420   1.729141             0.0  \\\n",
-       " 1           3.0    2.303282  2.302570  0.098200  19.601018           285.0   \n",
-       " 2           3.0    2.302126  2.301574  0.111200  19.168741           309.8   \n",
-       " 3           3.0    2.217693  1.982424  0.228178  19.218155           308.8   \n",
-       " 4           3.0    1.717483  1.644966  0.359289  19.185289           372.8   \n",
+       "-1           3.0         NaN  0.322473  0.886260   1.136197             0.0  \\\n",
+       " 1           3.0    2.303302  2.302398  0.100000  16.913589           229.6   \n",
+       " 2           3.0    2.301682  2.300086  0.153278  16.969304           283.2   \n",
+       " 3           3.0    2.068055  1.702323  0.372189  16.919213          1994.0   \n",
+       " 4           3.0    1.644859  1.396304  0.481533  16.921069          1804.8   \n",
        "\n",
        "       total_relu_call  \n",
        "epoch                   \n",
@@ -156,7 +156,7 @@
        " 4        1.056384e+09  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -232,9 +232,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>ReLU'(0)</th>\n",
-       "      <td>3.971240e+05</td>\n",
-       "      <td>7.029090e+05</td>\n",
-       "      <td>9.918000e+03</td>\n",
+       "      <td>4.038500e+05</td>\n",
+       "      <td>8.788240e+05</td>\n",
+       "      <td>2.335500e+04</td>\n",
        "      <td>2.580000e+03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -246,9 +246,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ReLU'(0)/ReLU'(x)</th>\n",
-       "      <td>7.518554e-06</td>\n",
-       "      <td>6.662392e-06</td>\n",
-       "      <td>1.877726e-07</td>\n",
+       "      <td>7.645894e-06</td>\n",
+       "      <td>8.329769e-06</td>\n",
+       "      <td>4.421688e-07</td>\n",
        "      <td>4.464286e-08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -264,13 +264,13 @@
       ],
       "text/plain": [
        "                       original        double          deep     mobilenet\n",
-       "ReLU'(0)           3.971240e+05  7.029090e+05  9.918000e+03  2.580000e+03\n",
+       "ReLU'(0)           4.038500e+05  8.788240e+05  2.335500e+04  2.580000e+03\n",
        "ReLU'(x)           5.281920e+10  1.055040e+11  5.281920e+10  5.779200e+10\n",
-       "ReLU'(0)/ReLU'(x)  7.518554e-06  6.662392e-06  1.877726e-07  4.464286e-08\n",
+       "ReLU'(0)/ReLU'(x)  7.645894e-06  8.329769e-06  4.421688e-07  4.464286e-08\n",
        "Parâmetros         7.341800e+04  2.567140e+05  1.104420e+05  1.528106e+06"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,16 +282,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "40.04073401895543"
+       "17.291800470991223"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,16 +302,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "168.4156064461408"
+       "171.26802374893978"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
